add in-memory database realization
